--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
+        <script src="https://kit.fontawesome.com/d62399579d.js" crossorigin="anonymous"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="styles.css" rel='stylesheet'>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
         <title>Covid Counter</title>
     </head>
     <body>
+        <i type="button" class="far fa-question-circle" data-bs-toggle="modal" data-bs-target="#info"></i>
+        <div class="modal fade" id="info" tabindex="-1" aria-labelledby="infoLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="infoLabel">About Covid Counter</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                        Only cases tested in a laboratory are counted; with news of sketchy reporting and others staying at home, there's more cases out there.
+                        <br><br>
+                        Covid-19-API from <a href="https://github.com/M-Media-Group/Covid-19-API">https://github.com/M-Media-Group/Covid-19-API</a>
+
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="container text-center">
             <div class="row">
                 <div class="col lh-1  sub-padding"><span>
@@ -25,20 +44,25 @@
                     <span class="lh-1"><div class="subs" id="deaths"></div>Deaths</span>
                 </div>
             </div>
-            <div class="row">
-                <div class="col lh-1 sub-padding">
-                    <span>
-                    <div id="administered"></div>
-                    Vaccines Administered
-                    </span>
-                </div>
             </div>
-            <div class="row">
-                <div class="col-lg-6 sub-padding">
-                    <span class="lh-1"><div class="subs" id="peopleVaccinated"></div>People Vaccinated</span>
+            <div class="text-center second-section">
+                <div class="container">
+                <div class="row">
+                    <div class="col lh-1 sub-padding">
+                        <span>
+                        <div id="administered"></div>
+                        Vaccines Administered
+                        </span>
+                    </div>
                 </div>
-                <div class="col-lg-6 sub-padding">
-                    <span class="lh-1"><div class="subs" id="peoplePartiallyVaccinated"></div>People Partially Vaccinated</span>
+                <div class="row">
+                    <div class="col-lg-6 sub-padding">
+                        <span class="lh-1"><div class="subs" id="peopleVaccinated"></div>People Vaccinated</span>
+                    </div>
+                    <div class="col-lg-6 sub-padding">
+                        <span class="lh-1"><div class="subs" id="peoplePartiallyVaccinated"></div>People Partially Vaccinated</span>
+                    </div>
+                </div>
                 </div>
             </div>
         </div>
