added loading animation

--- a/index.html
+++ b/index.html
@@ -28,20 +28,32 @@
         <div class="container text-center">
             <div class="row">
                 <div class="col lh-1  sub-padding"><span>
-                    <div id="activeCases"></div>
+                    <div id="activeCases">
+                        <div class="spinner-border text-light" role="status">
+                        </div>
+                    </div>
                     Active Cases
                     </span>
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-4 sub-padding">
-                    <span class="lh-1"><div class="subs" id="confirmed"></div>Confirmed Cases</span>
+                    <span class="lh-1"><div class="subs" id="confirmed">
+                        <div class="spinner-border text-light" role="status">
+                        </div>
+                    </div>Confirmed Cases</span>
                 </div>
                 <div class="col-lg-4 sub-padding">
-                    <span class="lh-1"><div class="subs" id="recovered"></div>Recovered</span>
+                    <span class="lh-1"><div class="subs" id="recovered">
+                        <div class="spinner-border text-light" role="status">
+                        </div>
+                    </div>Recovered</span>
                 </div>
                 <div class="col-lg-4 sub-padding">
-                    <span class="lh-1"><div class="subs" id="deaths"></div>Deaths</span>
+                    <span class="lh-1"><div class="subs" id="deaths">
+                        <div class="spinner-border text-light" role="status">
+                        </div>
+                    </div>Deaths</span>
                 </div>
             </div>
             </div>
@@ -50,17 +62,26 @@
                 <div class="row">
                     <div class="col lh-1 sub-padding">
                         <span>
-                        <div id="administered"></div>
+                        <div id="administered">
+                            <div class="spinner-border text-light" role="status">
+                            </div>
+                        </div>
                         Vaccines Administered
                         </span>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-lg-6 sub-padding">
-                        <span class="lh-1"><div class="subs" id="peopleVaccinated"></div>People Vaccinated</span>
+                        <span class="lh-1"><div class="subs" id="peopleVaccinated">
+                            <div class="spinner-border text-light" role="status">
+                            </div>
+                        </div>People Vaccinated</span>
                     </div>
                     <div class="col-lg-6 sub-padding">
-                        <span class="lh-1"><div class="subs" id="peoplePartiallyVaccinated"></div>People Partially Vaccinated</span>
+                        <span class="lh-1"><div class="subs" id="peoplePartiallyVaccinated">
+                            <div class="spinner-border text-light" role="status">
+                            </div>
+                        </div>People Partially Vaccinated</span>
                     </div>
                 </div>
                 </div>
